--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class=" navbar">
+    <header class="navbar">
         <div class="container">
-            <div class=" navbar-top">
+            <div class="navbar-top">
                 <a href="#" class="logo">
                     <img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
                 </a>
 
-                <form action="#" class="search  navbar__search">
+                <form action="#" class="search navbar__search">
                     <input type="text" class="search__input" placeholder="Search Location">
                     <button class="search__button">
                         <img src="img/search.svg" alt="Icon: search">
@@ -31,17 +31,21 @@
             </div>
             <!-- /. navbar-top -->
 
-            <ul class=" navbar-menu">
-                <li class=" navbar-menu__item"><a href="#" class=" navbar-menu__link">All Deals</a></li>
-                <li class=" navbar-menu__item"><a href="#" class=" navbar-menu__link">Hotels</a></li>
-                <li class=" navbar-menu__item"><a href="#" class=" navbar-menu__link">Activities</a></li>
-                <li class=" navbar-menu__item"><a href="#" class=" navbar-menu__link">Hotel Day Packages</a></li>
-                <li class=" navbar-menu__item"><a href="#" class=" navbar-menu__link">Restaurants</a></li>
-                <li class=" navbar-menu__item"><a href="#" class=" navbar-menu__link">Events</a></li>
-                <li class=" navbar-menu__item"><a href="#" class=" navbar-menu__link">Rodrigues</a></li>
-            </ul>
         </div>
         <!-- /.container -->
-    </ navbar>
+        <div class="navbar-bottom">
+            <div class="container">
+                <ul class="navbar-menu">
+                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
+                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
+                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
+                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotel Day Packages</a></li>
+                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Restaurants</a></li>
+                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Events</a></li>
+                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Rodrigues</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
