--- a/index.html
+++ b/index.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best tour plan - Hotel Booking</title>
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Best tour plan - Hotel Booking</title>
+		<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="navbar">
-        <div class="container">
-            <div class="navbar-top">
-                <a href="#" class="logo">
-                    <img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
-                </a>
+		<header class="navbar">
+				<div class="container">
+						<div class="navbar-top">
+								<a href="#" class="logo">
+										<img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
+								</a>
 
-                <form action="#" class="search navbar__search">
-                    <input type="text" class="search__input" placeholder="Search Location">
-                    <button class="search__button">
-                        <img src="img/search.svg" alt="Icon: search">
-                    </button>
-                </form>
+								<form action="#" class="search navbar__search">
+										<input type="text" class="search__input" placeholder="Search Location">
+										<button class="search__button">
+												<img src="img/search.svg" alt="Icon: search">
+										</button>
+								</form>
 
-                <a href="#" class="user">
-                    <img src="img/user-avatar.jpeg" alt="Avatar: Nathan" class="user__avatar">
-                    <span class="user__name">Nathan</span>
-                </a>
-                
-                <!-- /.user -->
-            </div>
-            <!-- /. navbar-top -->
+								<a href="#" class="user navbar__user">
+										<img src="img/user-avatar.jpeg" alt="Avatar: Nathan" class="user__avatar">
+										<span class="user__name">Nathan</span>
+								</a>
+								
+								<!-- /.user -->
+								<button class="menu-button navbar-top__menu-button">
+										<span class="menu-button__line"></span>
+										<span class="menu-button__line"></span>
+										<span class="menu-button__line"></span>
+								</button>
+						</div>
+						<!-- /. navbar-top -->
 
-        </div>
-        <!-- /.container -->
-        <div class="navbar-bottom">
-            <div class="container">
-                <ul class="navbar-menu">
-                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
-                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
-                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
-                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotel Day Packages</a></li>
-                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Restaurants</a></li>
-                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Events</a></li>
-                    <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Rodrigues</a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
+				</div>
+				<!-- /.container -->
+				<div class="navbar-bottom">
+						<div class="container">
+								<ul class="navbar-menu">
+										<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
+										<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
+										<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
+										<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotel Day Packages</a></li>
+										<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Restaurants</a></li>
+										<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Events</a></li>
+										<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Rodrigues</a></li>
+								</ul>
+						</div>
+				</div>
+		</header>
 </body>
 </html>
