create: added swiper-slider in hotel-section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Best tour plan - Hotel Booking</title>
 		<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="css/swiper-bundle.min.css">
 		<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -94,9 +95,32 @@
 					</div>
 					<!-- /.hotel-info__right -->
 				</div>
+				<div class="hotel-grid">
+					<div class="slider">
+						
+						<div class="swiper-container">
+							<!-- Additional required wrapper -->
+							<div class="swiper-wrapper">
+								<!-- Slides -->
+								<div class="swiper-slide"><img src="img/slide.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img src="img/slide.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img src="img/slide.jpg" alt="slide"></div>
+							</div>
+							<!-- If we need pagination -->
+							<div class="swiper-pagination"></div>
+
+							<!-- If we need navigation buttons -->
+							<button class="slider slider-button slider-button--prev"></button>
+							<button class="slider slider-button slider-button--next"></button>
+
+						</div>
+					</div>
+				</div>
 			</div>
 			<!-- /.container -->
 		</section>
 		<!-- /.hotel -->
+		<script src="js/swiper-bundle.min.js"></script>
+		<script src="js/main.js"></script>
 </body>
 </html>
