--- a/index.html
+++ b/index.html
@@ -103,8 +103,11 @@
 							<div class="swiper-wrapper">
 								<!-- Slides -->
 								<div class="swiper-slide"><img src="img/slide.jpg" alt="slide"></div>
-								<div class="swiper-slide"><img src="img/slide.jpg" alt="slide"></div>
-								<div class="swiper-slide"><img src="img/slide.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img src="img/slide2.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img src="img/slide3.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img src="img/slide4.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img src="img/slide5.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img src="img/slide6.jpg" alt="slide"></div>
 							</div>
 							<!-- If we need pagination -->
 							<div class="swiper-pagination"></div>
