--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Best tour plan - Hotel Booking</title>
-		<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/swiper-bundle.min.css">
 		<link rel="stylesheet" href="css/style.css">
 </head>
@@ -118,6 +118,41 @@
 
 						</div>
 					</div>
+					<div class="hotel-right">
+						<div class="booking">
+							<div class="booking__info">
+								<div class="booking__price">
+									<span class="booking__start">price starts as</span>
+									<strong class="booking__pricetag">$ 8,500</strong>
+									<span class="booking__per-room">per room / night</span>
+								</div>
+								<!-- /.price -->
+								<div class="booking__room">
+									<div class="booking__text">
+										<img src="img/user.svg" alt="Icon: user" class="booking__icon">
+										<span class="booking__description">2 x Guests</span>
+									</div>
+									<div class="booking__text">
+										<img src="img/home.svg" alt="Icon: home" class="booking__icon">
+										<span class="booking__description">1 x Room</span>
+									</div>
+								</div>
+								<!-- /.person-room -->
+							</div>
+							<div class="booking__call-center">
+								<span class="booking__heading">Quick Booking</span>
+								<a class="booking__number"href="tel:12100"><img src="img/phone.svg" alt="Icon: phone"> <span class="booking__num">12100</span></a>
+							</div>
+							<button class="button booking__button">
+								View Other Options
+							</button>
+						</div>
+						<!-- /.booking -->
+						<div class="map">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.5414950278614!2d98.2992197!3d7.8382524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x305025650c33dbab%3A0xa67a542329d011e1!2z0J_RhdGD0LrQtdGCLCDQmtCw0YDQvtC9LCDQntGC0LXQu9GMINCl0LjQu9GC0L7QvQ!5e0!3m2!1sru!2sru!4v1600797492748!5m2!1sru!2sru" width="347px" height="213px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+						</div>
+					</div>
+					<!-- /.hotel-right -->
 				</div>
 			</div>
 			<!-- /.container -->
