--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
 							<!-- Additional required wrapper -->
 							<div class="swiper-wrapper">
 								<!-- Slides -->
-								<div class="swiper-slide"><img class="swiper-slide__image"src="img/slide.jpg" alt="slide"></div>
-								<div class="swiper-slide"><img class="swiper-slide__image"src="img/slide2.jpg" alt="slide"></div>
-								<div class="swiper-slide"><img class="swiper-slide__image"src="img/slide3.jpg" alt="slide"></div>
-								<div class="swiper-slide"><img class="swiper-slide__image"src="img/slide4.jpg" alt="slide"></div>
-								<div class="swiper-slide"><img class="swiper-slide__image"src="img/slide5.jpg" alt="slide"></div>
-								<div class="swiper-slide"><img class="swiper-slide__image"src="img/slide6.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img class="swiper-slide__image" src="img/slide.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img class="swiper-slide__image" src="img/slide2.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img class="swiper-slide__image" src="img/slide3.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img class="swiper-slide__image" src="img/slide4.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img class="swiper-slide__image" src="img/slide5.jpg" alt="slide"></div>
+								<div class="swiper-slide"><img class="swiper-slide__image" src="img/slide6.jpg" alt="slide"></div>
 							</div>
 							<!-- If we need pagination -->
 							<div class="swiper-pagination"></div>
@@ -141,7 +141,7 @@
 							</div>
 							<div class="booking__call-center">
 								<span class="booking__heading">Quick Booking</span>
-								<a class="booking__number"href="tel:12100"><img src="img/phone.svg" alt="Icon: phone"> <span class="booking__num">12100</span></a>
+								<a class="booking__number" href="tel:12100"><img src="img/phone.svg" alt="Icon: phone"> <span class="booking__num">12100</span></a>
 							</div>
 							<button class="button booking__button">
 								View Other Options
@@ -149,7 +149,7 @@
 						</div>
 						<!-- /.booking -->
 						<div class="map">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.5414950278614!2d98.2992197!3d7.8382524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x305025650c33dbab%3A0xa67a542329d011e1!2z0J_RhdGD0LrQtdGCLCDQmtCw0YDQvtC9LCDQntGC0LXQu9GMINCl0LjQu9GC0L7QvQ!5e0!3m2!1sru!2sru!4v1600797492748!5m2!1sru!2sru" width="100%" height="213px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.5414950278614!2d98.2992197!3d7.8382524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x305025650c33dbab%3A0xa67a542329d011e1!2z0J_RhdGD0LrQtdGCLCDQmtCw0YDQvtC9LCDQntGC0LXQu9GMINCl0LjQu9GC0L7QvQ!5e0!3m2!1sru!2sru!4v1600797492748!5m2!1sru!2sru"   style="border:0; width:100%; height:213px; "></iframe>
 						</div>
 					</div>
 					<!-- /.hotel-right -->
