fix: pixel perfect for 320

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<header class="navbar">
 				<div class="container">
 						<div class="navbar-top">
-								<a href="#" class="logo">
+								<a href="index.html" class="logo">
 										<img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
 								</a>
 
@@ -100,12 +100,12 @@
 							<!-- Additional required wrapper -->
 							<div class="swiper-wrapper">
 								<!-- Slides -->
-								<div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide.jpg" alt="slide"></div>
-								<div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide2.jpg" alt="slide"></div>
-								<div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide3.jpg" alt="slide"></div>
-								<div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide4.jpg" alt="slide"></div>
-								<div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide5.jpg" alt="slide"></div>
-								<div class="swiper-slide hotel-slider__item"><img class="swiper-slide__image" src="img/slide6.jpg" alt="slide"></div>
+								<div class="swiper-slide hotel-slider__item"><img class="hotel-slider__image" src="img/slide.jpg" alt="slide"></div>
+								<div class="swiper-slide hotel-slider__item"><img class="hotel-slider__image" src="img/slide2.jpg" alt="slide"></div>
+								<div class="swiper-slide hotel-slider__item"><img class="hotel-slider__image" src="img/slide3.jpg" alt="slide"></div>
+								<div class="swiper-slide hotel-slider__item"><img class="hotel-slider__image" src="img/slide4.jpg" alt="slide"></div>
+								<div class="swiper-slide hotel-slider__item"><img class="hotel-slider__image" src="img/slide5.jpg" alt="slide"></div>
+								<div class="swiper-slide hotel-slider__item"><img class="hotel-slider__image" src="img/slide6.jpg" alt="slide"></div>
 							</div>
 
 							<!-- If we need navigation buttons -->
