--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@
 			</div>
 		</section>
 		<script src="js/swiper-bundle.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+		<script src="js/parallax.min.js"></script>
 		<script src="js/main.js"></script>
 </body>
 </html>
