--- a/index.html
+++ b/index.html
@@ -243,6 +243,43 @@
 				<!-- reviews-slider -->
 			</div>
 		</section>
+		<section class="activities">
+			<div class="container">
+				<h2 class="activities__title">Other Activities</h2>
+				<div class="activities-wrapper">
+					<div class="card activities__card">
+						<img src="img/activity-1.jpeg" alt="The curious corner 
+						of chamarel" class="card__image">
+						<h3 class="card__title">The curious corner<br>
+							of chamarel</h3>
+						<button class="card__button">Book Now</button>
+					</div>
+					<!-- card -->
+					<div class="card activities__card">
+						<img src="img/activity-2.jpeg" alt="Gymkhana club golf
+						course" class="card__image">
+						<h3 class="card__title">Gymkhana club golf<br>course</h3>
+						<button class="card__button">Book Now</button>
+					</div>
+					<!-- card -->
+					<div class="card activities__card">
+						<img src="img/activity-3.jpeg" alt="Tamarind falls hiking
+						trip - full day" class="card__image">
+						<h3 class="card__title">Tamarind falls hiking<br> trip - full day</h3>
+						<button class="card__button">Book Now</button>
+					</div>
+					<!-- card -->
+					<div class="card activities__card">
+						<img src="img/activity-4.jpeg" alt="The blue marine discovery
+						quest" class="card__image">
+						<h3 class="card__title">The blue marine discovery<br>quest</h3>
+						<button class="card__button">Book Now</button>
+					</div>
+					<!-- card -->
+				</div>
+				<!-- /.activities-wrapper -->
+			</div>
+		</section>
 		<script src="js/swiper-bundle.min.js"></script>
 		<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 		<script src="js/parallax.min.js"></script>
