--- a/index.html
+++ b/index.html
@@ -152,6 +152,162 @@
 			</div>
 			<!-- /.container -->
 		</section>
+		<section class="packages">
+			<div class="container">
+				<h2 class="packages-title packages__title">
+					Other Packages
+				</h2>
+				<div class="packages-wrapper">
+					<div class="flash-card packages__card">
+						<div class="flash-card__label flash-card__label--big">Flash Offer</div>
+						<img src="img/package-1.jpeg" alt="Hotel Blue Haven" class="flash-card__img">
+
+						<div class="flash-block flash-card__block">
+							<div class="stars flash-block__stars">
+								<img src="img/star.svg" alt="star" class="stars__icon">
+								<img src="img/star.svg" alt="star" class="stars__icon">
+								<img src="img/star.svg" alt="star" class="stars__icon">
+								<img src="img/star.svg" alt="star" class="stars__icon">
+								<img src="img/star.svg" alt="star" class="stars__icon">
+							</div>
+							<div class="flash-card__title">Hotel Blue Haven</div>
+							<div class="flash-block__description">Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur enim laborum magna llit. Ipsum est fugiat velit ea llamco do esse ut in veniam sun in onsequat. Aute quis duis epteur excepteur ipsum occaecat eiusmod nsectetur enim laborum magna mollit. Ipsum est fugiat velit ea ullamco do</div>
+							<div class="flash-block__booking">
+								<div class="flash-card__text">
+									<img src="img/geo.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">1749 Wheeler Ridge  Delaware</span>
+								</div>
+								<div class="flash-card__text">
+									<img src="img/user.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">2 x Guests</span>
+								</div>
+								<div class="flash-card__text">
+									<img src="img/home.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">1 x Room</span>
+								</div>
+							</div>
+							<!-- flash-card__booking -->
+							<div class="flash-card__old-price">$ 10,500</div>
+							<div class="flash-card__bottom">	
+								<div class="flash-card__new-price">$ 8,500</div>
+								<button class="flash-card__button">Book Now</button>
+							</div>
+						</div>
+						<!-- flash-card__block -->
+					</div>
+					<div class="flash-card packages__flash-card">
+						<div class="flash-card__label  flash-card__label--small">Flash Offer</div>
+						<img src="img/package-2.jpeg" alt="LUX* Belle Mare" class="flash-card__img">
+						<div class="small-flash flash-card__block">
+							<div class="small-flash__title">LUX* Belle Mare</div>
+							<div class="small-flash__booking">
+								<div class="flash-card__text">
+									<img src="img/geo.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">1749 Wheeler Ridge  Delaware</span>
+								</div>
+								<div class="flash-card__text">
+									<img src="img/user.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">2 x Guests</span>
+								</div>
+								<div class="flash-card__text">
+									<img src="img/home.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">1 x Room</span>
+								</div>
+							</div>
+							<!-- flash-card__booking -->
+							<div class="flash-card__old-price">$ 8,500</div>
+							<div class="flash-card__bottom">	
+								<div class="flash-card__new-price">$ 3,000</div>
+								<button class="flash-card__button">Book Now</button>
+							</div>
+						</div>
+					</div>
+					<div class="flash-card packages__flash-card">
+						<div class="flash-card__label flash-card__label--small">Flash Offer</div>
+						<img src="img/package-3.jpeg" alt="White Palace" class="flash-card__img">
+						<div class="small-flash flash-card__block">
+							<div class="small-flash__title">White Palace</div>
+							<div class="small-flash__booking">
+								<div class="flash-card__text">
+									<img src="img/geo.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">1749 Wheeler Ridge  Delaware</span>
+								</div>
+								<div class="flash-card__text">
+									<img src="img/user.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">2 x Guests</span>
+								</div>
+								<div class="flash-card__text">
+									<img src="img/home.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">1 x Room</span>
+								</div>
+							</div>
+							<!-- flash-card__booking -->
+							<div class="flash-card__old-price">$ 10,500</div>
+							<div class="flash-card__bottom">	
+								<div class="flash-card__new-price">$ 9,500</div>
+								<button class="flash-card__button">Book Now</button>
+							</div>
+						</div>
+					</div>
+					<div class="flash-card packages__flash-card">
+						<div class="flash-card__label flash-card__label--small">Flash Offer</div>
+						<img src="img/package-4.jpeg" alt="Luxury Place" class="flash-card__img">
+						<div class="small-flash flash-card__block">
+							<div class="small-flash__title">Luxury Place</div>
+							<div class="small-flash__booking">
+								<div class="flash-card__text">
+									<img src="img/geo.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">1749 Wheeler Ridge  Delaware</span>
+								</div>
+								<div class="flash-card__text">
+									<img src="img/user.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">2 x Guests</span>
+								</div>
+								<div class="flash-card__text">
+									<img src="img/home.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">1 x Room</span>
+								</div>
+							</div>
+							<!-- flash-card__booking -->
+							<div class="flash-card__old-price">$ 4,500</div>
+							<div class="flash-card__bottom">	
+								<div class="flash-card__new-price">$ 2,500</div>
+								<button class="flash-card__button">Book Now</button>
+							</div>
+						</div>
+					</div>
+					<div class="flash-card packages__flash-card">
+						<div class="flash-card__label flash-card__label--small">Flash Offer</div>
+						<img src="img/package-5.jpeg" alt="Hotel Five Star" class="flash-card__img">
+						<div class="small-flash flash-card__block">
+							<div class="small-flash__title">Hotel Five Star</div>
+							<div class="small-flash__booking">
+								<div class="flash-card__text">
+									<img src="img/geo.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">1749 Wheeler Ridge  Delaware</span>
+								</div>
+								<div class="flash-card__text">
+									<img src="img/user.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">2 x Guests</span>
+								</div>
+								<div class="flash-card__text">
+									<img src="img/home.svg" alt="Icon: user" class="flash-card__icon">
+										<span class="flash-card__info">1 x Room</span>
+								</div>
+							</div>
+							<!-- flash-card__booking -->
+							<div class="flash-card__old-price">$ 6,500</div>
+							<div class="flash-card__bottom">	
+								<div class="flash-card__new-price">$ 3,500</div>
+								<button class="flash-card__button">Book Now</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- /.packages-wrapper -->
+			</div>
+		</section>
+		<!-- /.packages -->
 		<section class="newsletter">
 			<div class="newsletter-wrapper">
 				<h2 class="newsletter-title newsletter__title">
