fix: bem naming

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 									<img src="img/reviews-avatar.jpeg" alt="Photo: Megan Fox" class="reviews-slider__avatar">
 									<h3 class="reviews-slider__username">Megan Fox</h3>
 									<span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
-									<div class="reviews-slider__rating">
+									<div class=" stars reviews-slider__rating">
 										<img src="img/star.svg" alt="star" class="stars__icon">
 										<img src="img/star.svg" alt="star" class="stars__icon">
 										<img src="img/star.svg" alt="star" class="stars__icon">
@@ -354,7 +354,7 @@
 									<img src="img/reviews-avatar-1.jpeg" alt="Photo: Dorian Grey" class="reviews-slider__avatar">
 									<h3 class="reviews-slider__username">Dorian Grey</h3>
 									<span class="reviews-slider__date">Stayed 1 Jan, 2018</span>
-									<div class="reviews-slider__rating">
+									<div class="stars reviews-slider__rating">
 										<img src="img/star.svg" alt="star" class="stars__icon">
 										<img src="img/star.svg" alt="star" class="stars__icon">
 										<img src="img/star.svg" alt="star" class="stars__icon">
@@ -375,7 +375,7 @@
 									<img src="img/reviews-avatar-2.jpeg" alt="Photo: Ross Geller" class="reviews-slider__avatar">
 									<h3 class="reviews-slider__username">Ross Geller</h3>
 									<span class="reviews-slider__date">Stayed 23 Dec, 2019</span>
-									<div class="reviews-slider__rating">
+									<div class="stars reviews-slider__rating">
 										<img src="img/star.svg" alt="star" class="stars__icon">
 										<img src="img/star.svg" alt="star" class="stars__icon">
 										<img src="img/star.svg" alt="star" class="stars__icon">
