--- a/index.html
+++ b/index.html
@@ -436,6 +436,112 @@
 				<!-- /.activities-wrapper -->
 			</div>
 		</section>
+		<footer class="footer">
+			<div class="container">
+				<div class="footer-wrapper">
+					<img src="img/vertical-logo.svg" alt="Logo; Best Tour Plan" class="logo footer__logo">
+					<div class="footer__list footer__categories">
+						<div class="footer__title">ALL CATEGORIES</div>
+						<ul class="footer__ul">
+							<li class="footer__item"><a href="#" class="footer__link">All Deals</a></li>
+							<li class="footer__item"><a href="#" class="footer__link">Hotels
+							</a></li>
+							<li class="footer__item"><a href="#" class="footer__link">Activities
+							</a></li>
+							<li class="footer__item"><a href="#" class="footer__link">Spa Packages
+							</a></li>
+							<li class="footer__item"><a href="#" class="footer__link">Hotel Day Packages
+							</a></li>
+							<li class="footer__item"><a href="#" class="footer__link">Restaurants
+							</a></li>
+							<li class="footer__item"><a href="#" class="footer__link">Fitness
+							</a></li>
+							<li class="footer__item"><a href="#" class="footer__link">Rodrigues</a></li>
+						</ul>
+					</div>
+					<!-- footer__list -->
+					<div class="footer__list footer__additional">
+						<div class="footer__title">ADDITIONAL INFORMATION</div>
+						<ul class="footer__ul">
+							<li class="footer__item"><a href="#" class="footer__link">About Us
+							</a></li>
+							<li class="footer__item"><a href="#" class="footer__link">Contact Us
+							</a></li>
+							<li class="footer__item"><a href="#" class="footer__link">How does it work?
+							</a></li>
+							<li class="footer__item"><a href="#" class="footer__link">Frequently Asked Questions
+							</a></li>
+							<li class="footer__item"><a href="#" class="footer__link">Deals.mu loyalty program
+							</a></li>
+							<li class="footer__item"><a href="#" class="footer__link">Promote your Business on BTP
+							</a></li>
+						</ul>
+					</div>
+					<div class="footer__social-network">
+						<h3 class="footer__title footer__title--inline">Social Network</h3>
+						<div class="footer__social-links">
+							<a href="#" class="footer__link"><img src="img/fb.svg" alt="Icon: Facebook"></a>
+							<a href="#" class="footer__link"><img src="img/yt.svg" alt="Icon: Youtube"></a>
+							<a href="#" class="footer__link"><img src="img/inst.svg" alt="Icon: Instagram"></a>
+						</div>
+					</div>
+					<!-- footer__social-network -->
+						<div class="footer__list footer__legal">
+							<h3 class="footer__title">LEGAL INFORMATION
+							</h3>
+							<ul class="footer__ul">
+								<li class="footer__item"><a href="#" class="footer__link">Terms & Conditions
+								</a></li>
+								<li class="footer__item"><a href="#" class="footer__link">Disclaimer
+								</a></li>
+								<li class="footer__item"><a href="#" class="footer__link">Cancellation policy
+								</a></li>
+								<li class="footer__item"><a href="#" class="footer__link">Privacy</a></li>
+							</ul>
+						</div>
+						<!-- footer__list -->
+						<div class="footer__contact-details">
+							<h3 class="footer__title footer__title--mb-3 footer__title--mt-3">Contact Details</h3>
+							<p class="footer__text">Feel free to contact us by phone, email or by our contact form</p>
+							<ul class="footer__ul">
+								<li class="footer__item footer__item--mb-2">
+									<div class="footer__icon-wrapper">
+										<img src="img/map-marker.svg" alt="Icon: map marker" class="footer__icon">
+									</div>
+									9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United States
+								</li>
+								<li class="footer__item footer__item--mb-2">
+									<div class="footer__icon-wrapper"><img src="img/phone-call.svg" alt="Icon: phone-call" class="footer__icon"></div>
+									Tel (business hours) : 269 1500 <br>
+									Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00 pm) <br>
+									Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm) <br>
+
+								</li>
+								<li class="footer__item footer__item--mb-2">
+
+									<div class="footer__icon-wrapper">
+										<img src="img/mail.svg" alt="Icon: mail" class="footer__icon">
+									</div>
+									cherly.lawson@example.com
+								</li>
+							</ul>
+						</div>
+						<div class="footer__contact-form">
+							<h3 class="footer__title footer__title--mb-3">Send us a message</h3>
+							<form action="#" class="footer__form">
+								<input type="text" class="input footer__input" placeholder="Your Full Name*">
+								<input type="text" class="input footer__input" placeholder="Phone Number*">
+								<textarea class="footer__message"  cols="30" rows="10" placeholder="Message"></textarea>
+								<button class="button footer__button">Send</button>
+								<span class="footer__info">* Required Fields</span>
+							</form>
+						</div>
+				</div>
+				<!-- /.footer-wrapper -->
+			</div>
+			<!-- /.container -->
+		</footer>
+		<!-- /.footer -->
 		<script src="js/swiper-bundle.min.js"></script>
 		<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 		<script src="js/parallax.min.js"></script>
