create: added footer section & pp

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 						</div>
 						<!-- footer__list -->
 						<div class="footer__contact-details">
-							<h3 class="footer__title footer__title--mb-3 footer__title--mt-3">Contact Details</h3>
+							<h3 class="footer__title footer__title--mb-2 footer__title--mt-3">Contact Details</h3>
 							<p class="footer__text">Feel free to contact us by phone, email or by our contact form</p>
 							<ul class="footer__ul">
 								<li class="footer__item footer__item--mb-2">
@@ -535,6 +535,16 @@
 								<button class="button footer__button">Send</button>
 								<span class="footer__info">* Required Fields</span>
 							</form>
+						</div>
+						<div class="bottom footer__bottom">
+							<div class="bottom__pages">
+								<a href="#" class="footer__bottom-links">Disclaimer</a>
+								<a href="#" class="footer__bottom-links">Conditions of use</a>
+								<a href="#" class="footer__bottom-links">Cancellation policy</a>
+							</div>
+							<div class="bottom__pay">
+								<img src="img/pay.png" alt="Icons: paying systems" class="bottom__img">
+							</div>
 						</div>
 				</div>
 				<!-- /.footer-wrapper -->
