--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 		<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-		<header class="navbar">
+		<header class="navbar navbar--mobile--fixed">
 				<div class="container">
 						<div class="navbar-top">
 								<a href="index.html" class="logo">
 										<img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
 								</a>
 
-								<form action="#" class="search navbar__search">
+								<form action="#" class="search navbar__search navbar__search--mobile--hidden">
 										<input type="text" class="search__input" placeholder="Search Location">
 										<button class="search__button">
 												<img src="img/search.svg" alt="Icon: search">
 										</button>
 								</form>
 
-								<a href="#" class="user navbar__user">
+								<a href="#" class="user navbar__user navbar__user--mobile--hidden">
 										<img src="img/user-avatar.jpeg" alt="Avatar: Nathan" class="user__avatar">
 										<span class="user__name">Nathan</span>
 								</a>
@@ -43,6 +43,20 @@
 				<div class="navbar-bottom">
 						<div class="container">
 								<ul class="navbar-menu">
+										<li class="navbar-menu__item navbar-menu__item navbar-menu__item--mobile--visible">
+											<a href="#" class="user navbar__user navbar__user--mobile--visible">
+												<img src="img/user-avatar.jpeg" alt="Avatar: Nathan" class="user__avatar">
+												<span class="user__name user__name--light">Nathan</span>
+											</a>
+										</li>
+										<li class="navbar-menu__item navbar-menu__item--mobile--visible">
+											<form action="#" class="search navbar__search navbar__search--mobile--visible">
+												<input type="text" class="search__input" placeholder="Search Location">
+												<button class="search__button">
+														<img src="img/search.svg" alt="Icon: search">
+												</button>
+											</form>
+										</li>
 										<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
 										<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
 										<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
