create: modal and mail php

--- a/thanknewsletter.html
+++ b/thanknewsletter.html
@@ -93,7 +93,8 @@
 						<div class="hotel-wrapper">
 							<h1 class="hotel-name hotel-info__name">Thank you!</h1>
                         </div>
-                        <p class="hotel-description hotel-info__description">Your message message has been sent. Our manager will contact you soon </p>
+                        <p class="hotel-description hotel-info__description">
+							you subscribed to the newsletter </p>
 					</div>
 				</div>
 			</div>
