--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 								<span class="booking__heading">Quick Booking</span>
 								<a class="booking__number" href="tel:12100"><img src="img/phone.svg" alt="Icon: phone"> <span class="booking__num">12100</span></a>
 							</div>
-							<button class="button booking__button">
+							<button data-toggle="modal" class="button booking__button">
 								View Other Options
 							</button>
 						</div>
@@ -329,9 +329,10 @@
 					subscribe to our
 					<span class="newsletter-title__strong">Newsletter</span>
 				</h2>
-				<form action="#" class="subscribe newsletter__subscribe">
-					<input type="text" class="subscribe__input" placeholder="Your email address">
-					<button class="subscribe__button">Send</button>
+				<form action="send.php" method="POST" class="subscribe newsletter__subscribe">
+					<input type="text" class="subscribe__input" placeholder="Your email address" name="news">
+					<input  type="submit" name="newsletter" class="button subscribe__button" value="Send">
+					<!-- <button class="subscribe__button">Send</button> -->
 			</form>
 			</div>
 			<!-- /.newsletter-wrapper -->
@@ -546,8 +547,9 @@
 							<form action="send.php" method="POST" class="footer__form">
 								<input type="text" class="input footer__input" placeholder="Your Full Name*" name="name">
 								<input type="text" class="input footer__input" placeholder="Phone Number*" name="phone">
-								<textarea class="footer__message" placeholder="Message" name="message"></textarea>
-								<button class="button footer__button">Send</button>
+								<textarea class="message footer__message" placeholder="Message" name="message"></textarea>
+								<!-- <button class="button footer__button">Send</button> -->
+								<input type="submit" name="footermail" class="button footer__button" value="Send">
 								<span class="footer__info">* Required Fields</span>
 							</form>
 						</div>
@@ -567,6 +569,25 @@
 			<!-- /.container -->
 		</footer>
 		<!-- /.footer -->
+		<div class="modal" id="modal">
+			<div class="modal__overlay"></div>
+			<div class="modal__dialog">
+				<a href="#" class="modal__close">
+					<img src="img/close.svg" alt="Icon: close">
+				</a>
+				<h3 class="modal__title modal__title--mb-3">Booking</h3>
+							<form action="send.php" method="POST" class="form modal__form">
+								<input type="text" class="input modal__input" placeholder="Your Full Name*" name="modal_name">
+								<input type="text" class="input modal__input" placeholder="Phone Number*" name="modal_phone">
+								<input type="text" class="input modal__input" placeholder="Email*" name="email">
+								<textarea class="message modal__message" placeholder="Message" name="modal_message"></textarea>
+								<!-- <button class="button modal__button">Send</button> -->
+								<input type="submit" name="modalmail" class="button modal__button" value="Send">
+								<span class="modal__info">* Required Fields</span>
+							</form>
+			</div>
+		</div>
+		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/swiper-bundle.min.js"></script>
 		<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 		<script src="js/parallax.min.js"></script>
