--- a/thanknewsletter.html
+++ b/thanknewsletter.html
@@ -5,8 +5,29 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="format-detection" content="telephone=no">
 		<title>Best tour plan - Hotel Booking</title>
+		<!-- favicon -->
+		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+		<link rel="manifest" href="favicon/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
+
+		<!-- favicon -->
 		<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/swiper-bundle.min.css">
+		<link rel="stylesheet" href="css/aos.css">
 		<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -96,7 +117,7 @@
                         <p class="hotel-description hotel-info__description">
 							you subscribed to the newsletter </p>
 					</div>
-					<a href="index.html" class="hotel-info__back-button">
+					<a href="https://riyaromanova.ru/tour-plan/" class="hotel-info__back-button">
 						Back to main page
 					</a>
 				</div>
@@ -106,7 +127,9 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="footer-wrapper">
-					<img src="img/vertical-logo.svg" alt="Logo; Best Tour Plan" class="logo footer__logo">
+					<a href="https://riyaromanova.ru/tour-plan/" class="footer__logo">
+						<img src="img/vertical-logo.svg" alt="Logo: Best Tour Plan" class="logo footer__logo-img">
+					</a>
 					<div class="footer__list footer__categories">
 						<div class="footer__title">ALL CATEGORIES</div>
 						<ul class="footer__ul">
@@ -179,17 +202,18 @@
 								</li>
 								<li class="footer__item footer__item--mb-2">
 									<div class="footer__icon-wrapper"><img src="img/phone-call.svg" alt="Icon: phone-call" class="footer__icon"></div>
-									Tel (business hours) : 269 1500 <br>
-									Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00 pm) <br>
-									Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm) <br>
-
+									<p class="footer__telephones">
+										Tel (business hours) : <a href="tel:2691500" class="footer__num">269 1500</a> <br>
+										Tel (hotline) Monday - Saturday: <a href="tel:52-56-61-38" class="footer__num">52-56-61-38</a> (08:00 am – 20:00 pm) <br>
+										Tel (hotline) Sunday: <a href="tel:52-56-61-38" class="footer__num">52-56-61-38</a> (08:00 am – 14:00 pm) <br>
+									</p>
 								</li>
 								<li class="footer__item footer__item--mb-2">
 
 									<div class="footer__icon-wrapper">
 										<img src="img/mail.svg" alt="Icon: mail" class="footer__icon">
 									</div>
-									cherly.lawson@example.com
+									<a href="mailto:cherly.lawson@example.com" class="footer__mail">cherly.lawson@example.com</a>
 								</li>
 							</ul>
 						</div>
@@ -200,7 +224,7 @@
 									<input type="text" class="input footer__input" placeholder="Your Full Name*" name="name" required>
 								</div>
 								<div class="footer__input-group">
-									<input type="tel" class="input footer__input footer__input--phone" placeholder="Phone Number*" name="phone" required>
+									<input type="tel" class="input footer__input footer__input--phone" placeholder="Phone Number*" name="phone" data-mask="+7 (000) 000 00 00" minlength="18" required>
 								</div>
 								<textarea class="message footer__message" placeholder="Message" name="message"></textarea>
 								<!-- <button class="button footer__button">Send</button> -->
@@ -224,11 +248,9 @@
 			<!-- /.container -->
 		</footer>
 		<!-- /.footer -->
-		<script src="js/swiper-bundle.min.js"></script>
-		<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-		<script src="js/parallax.min.js"></script>
+		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/jquery.validate.min.js"></script>
 		<script src="js/jquery.mask.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="js/main.min.js"></script>
 </body>
 </html>
